Add syntax highlighting, logging